Enhance vercel.json with API redirects and update apiService to handle redirects and CORS errors more effectively; added withCredentials option for improved security.

--- a/vercel.json
+++ b/vercel.json
@@ -27,5 +27,19 @@
         }
       ]
     }
+  ],
+  "redirects": [
+    {
+      "source": "/api/:path*",
+      "has": [
+        {
+          "type": "header",
+          "key": "location",
+          "value": "https://perfectdomain.com/domain/moonhwa.com(.*)"
+        }
+      ],
+      "destination": "https://moonhwa.com$1",
+      "permanent": false
+    }
   ]
 }
