--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://moonhwa.com/:path*"
+      "destination": "https://scrapergo.vercel.app/api/:path*"
     }
   ],
   "headers": [
@@ -15,7 +15,7 @@
         },
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://moonhwa.vercel.app"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
